--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,7 @@ ENV/
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/misc.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
